--- a/web/themes/digitac/scss/03_component/_paragraph-header.scss
+++ b/web/themes/digitac/scss/03_component/_paragraph-header.scss
@@ -98,7 +98,8 @@
     }
 
     &.paragraph--title--Moderar_comentarios_pendientes,
-    &.paragraph--title--Administrar_retos {
+    &.paragraph--title--Administrar_retos,
+    &.paragraph--title--Mi_cuenta {
         padding-bottom: 0;
     }
 }
