--- a/web/themes/digitac/templates/paragraphs/paragraph--eliminar-cuenta.html.twig
+++ b/web/themes/digitac/templates/paragraphs/paragraph--eliminar-cuenta.html.twig
@@ -49,7 +49,7 @@
   ]
 %}
 {% block paragraph %}
-<div class="user-account">
+<div class="user-account user-account-delete">
       <div class="user-box user-box--secondary">
         <div class="container">
           <a href data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-secondary">{{ 'Eliminar mi cuenta'|t}}</a>
