--- a/web/themes/digitac/templates/system/page--user--register.html.twig
+++ b/web/themes/digitac/templates/system/page--user--register.html.twig
@@ -84,6 +84,7 @@ set footer_classes = 'footer' ~
 					<div class="register__col-description">
 						<h2>{{'Registro'|t}}</h2>
 						<p>{{'Date de alta y participa en la comunidad de Digitac HUB. Todos los campos marcados con <span class="required-color">*</span> son obligatorios'|t}}</p>
+						<div class="error-box"></div>
 					</div>
 
 					{{ page.content }}
