--- a/web/themes/digitac/scss/digitac-hub.scss
+++ b/web/themes/digitac/scss/digitac-hub.scss
@@ -74,6 +74,7 @@
 @import '05_theme/view-filters';
 @import '05_theme/view-votingapi-votes';
 @import '05_theme/view-distributivas';
+@import '05_theme/view-pager';
 
 // page
 @import '05_theme/page/node--type-noticia';
