--- a/web/themes/digitac/templates/nodes/node--reto.html.twig
+++ b/web/themes/digitac/templates/nodes/node--reto.html.twig
@@ -171,7 +171,7 @@
     <div class="tab-pane tab-pane-experience fade" id="experience" role="tabpanel" aria-labelledby="experience-tab">
 
       {% if esta_cerrado!=1 %}
-      <div class="message" id="message-idea">
+      <div class="message" id="message-experience">
         <a href="#" class="message__close js-message-close"><span class="visually-hidden">Cerrar mensaje</span></a>
         <div class="message__content">
           <p class="message__title">{{'Tablero de experiencias'|t}}</p>
