--- a/web/themes/digitac/css/digitac-hub.css
+++ b/web/themes/digitac/css/digitac-hub.css
@@ -6630,75 +6630,6 @@ body:not(.path-frontpage) .header.fixed {
 .view-id-view_retos.view-display-id-block_3 nav {
   width: 100%;
 }
-.view-id-view_retos.view-display-id-block_3 .pager-show-more {
-  width: 100%;
-  margin-top: 2.5rem;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-}
-.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item {
-  width: 100%;
-  padding: 0;
-  display: inline-flex;
-}
-@media (min-width: 768px) {
-  .view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item {
-    width: auto;
-  }
-}
-.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item a {
-  min-width: 7.5rem;
-  width: 100%;
-  margin: 0;
-  padding: 0.625rem 1rem;
-  text-align: center;
-  border: none;
-  border-radius: 0;
-  border: 0.0625rem solid #475467;
-  font-family: "Open Sans", arial, sans-serif;
-  font-weight: 600;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  text-decoration: none;
-  border-radius: 3.125rem;
-  color: #ffffff;
-  border-color: #196E8C;
-  background-color: #196E8C;
-  transition: all 0.3s ease;
-  padding-left: 2.5rem;
-  position: relative;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-}
-.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item a::before {
-  content: "";
-  width: 1.25rem;
-  height: 1.25rem;
-  background-image: url("../images/icons/icon-load-more.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: inline-flex;
-  align-self: center;
-  margin-right: 0.625rem;
-  margin-left: -1.875rem;
-}
-@media (min-width: 768px) {
-  .view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item a::before {
-    margin-right: 0;
-    margin-left: 0;
-    position: absolute;
-    top: 50%;
-    left: 0.75rem;
-    transform: translateY(-50%);
-  }
-}
-.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item a:hover {
-  border-color: #115B75;
-  background-color: #115B75;
-  color: #ffffff;
-}
 .view-id-view_retos.view-display-id-block_2:not(:first-child) {
   display: none;
 }
@@ -7331,6 +7262,97 @@ body:not(.path-frontpage) .header.fixed {
 .view-distributivas .view-filters .form--inline .btn {
   margin-top: 0;
   margin-left: 0.25rem;
+}
+
+.view-id-view_noticias.view-display-id-block_3 .pager-show-more,
+.view-id-view_retos.view-display-id-block_3 .pager-show-more,
+.view-id-distributivas.view-display-id-block_1 .pager-show-more,
+.view-id-distributivas.view-display-id-block_3 .pager-show-more {
+  width: 100%;
+  margin-top: 2.5rem;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+.view-id-view_noticias.view-display-id-block_3 .pager-show-more .pager__item,
+.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item,
+.view-id-distributivas.view-display-id-block_1 .pager-show-more .pager__item,
+.view-id-distributivas.view-display-id-block_3 .pager-show-more .pager__item {
+  width: 100%;
+  padding: 0;
+  display: inline-flex;
+}
+@media (min-width: 768px) {
+  .view-id-view_noticias.view-display-id-block_3 .pager-show-more .pager__item,
+.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item,
+.view-id-distributivas.view-display-id-block_1 .pager-show-more .pager__item,
+.view-id-distributivas.view-display-id-block_3 .pager-show-more .pager__item {
+    width: auto;
+  }
+}
+.view-id-view_noticias.view-display-id-block_3 .pager-show-more .pager__item a,
+.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item a,
+.view-id-distributivas.view-display-id-block_1 .pager-show-more .pager__item a,
+.view-id-distributivas.view-display-id-block_3 .pager-show-more .pager__item a {
+  min-width: 7.5rem;
+  width: 100%;
+  margin: 0;
+  padding: 0.625rem 1rem;
+  text-align: center;
+  border: none;
+  border-radius: 0;
+  border: 0.0625rem solid #475467;
+  font-family: "Open Sans", arial, sans-serif;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  text-decoration: none;
+  border-radius: 3.125rem;
+  color: #ffffff;
+  border-color: #196E8C;
+  background-color: #196E8C;
+  transition: all 0.3s ease;
+  padding-left: 2.5rem;
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+.view-id-view_noticias.view-display-id-block_3 .pager-show-more .pager__item a::before,
+.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item a::before,
+.view-id-distributivas.view-display-id-block_1 .pager-show-more .pager__item a::before,
+.view-id-distributivas.view-display-id-block_3 .pager-show-more .pager__item a::before {
+  content: "";
+  width: 1.25rem;
+  height: 1.25rem;
+  background-image: url("../images/icons/icon-load-more.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: inline-flex;
+  align-self: center;
+  margin-right: 0.625rem;
+  margin-left: -1.875rem;
+}
+@media (min-width: 768px) {
+  .view-id-view_noticias.view-display-id-block_3 .pager-show-more .pager__item a::before,
+.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item a::before,
+.view-id-distributivas.view-display-id-block_1 .pager-show-more .pager__item a::before,
+.view-id-distributivas.view-display-id-block_3 .pager-show-more .pager__item a::before {
+    margin-right: 0;
+    margin-left: 0;
+    position: absolute;
+    top: 50%;
+    left: 0.75rem;
+    transform: translateY(-50%);
+  }
+}
+.view-id-view_noticias.view-display-id-block_3 .pager-show-more .pager__item a:hover,
+.view-id-view_retos.view-display-id-block_3 .pager-show-more .pager__item a:hover,
+.view-id-distributivas.view-display-id-block_1 .pager-show-more .pager__item a:hover,
+.view-id-distributivas.view-display-id-block_3 .pager-show-more .pager__item a:hover {
+  border-color: #115B75;
+  background-color: #115B75;
+  color: #ffffff;
 }
 
 .node-news {
