--- a/web/themes/digitac/templates/system/page--user--login.html.twig
+++ b/web/themes/digitac/templates/system/page--user--login.html.twig
@@ -86,5 +86,9 @@ set footer_classes = 'footer' ~
 
   </main>
 
+  <footer class="{{ footer_classes }}" id="footer">
+    {{ page.footer }}
+  </footer>
+
 
 </div>
