--- a/web/themes/digitac/templates/system/page--user--register.html.twig
+++ b/web/themes/digitac/templates/system/page--user--register.html.twig
@@ -96,5 +96,9 @@ set footer_classes = 'footer' ~
 
 	</main>
 
+  <footer class="{{ footer_classes }}" id="footer">
+    {{ page.footer }}
+  </footer>
+
 
 </div>
