--- a/web/themes/digitac/templates/views/views-view-fields--estadisticas-soluciones--block.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--estadisticas-soluciones--block.html.twig
@@ -34,7 +34,7 @@
 <div class="group-row">
 
     <span class="group-row__number"> {{ fields.counter.content|render|striptags|trim }} </span>
-    <span class="group-row__title"> {{ fields.title.content|render|striptags|trim }} </span>
+    <span class="group-row__title"> <a href="{{ fields.view_node.content|render|striptags|trim }}">{{ fields.title.content|render|striptags|trim }} </a></span>
 
     <div class="group-row__rating">
         <div class="stars">
