--- a/web/themes/digitac/scss/02_layout/_header.scss
+++ b/web/themes/digitac/scss/02_layout/_header.scss
@@ -389,8 +389,12 @@
           font-weight: 600;
           font-size: 14px;
           line-height: 20px;
-          color: $white;
+          color: $primary;
           position: relative;
+
+          @include media(xxl) {
+            color: $white;
+          }
 
           &::after {
             content: '';
