--- a/web/themes/digitac/templates/nodes/node--idea.html.twig
+++ b/web/themes/digitac/templates/nodes/node--idea.html.twig
@@ -99,7 +99,7 @@
 
             <span class="author__letters">
               {% set siglas = author_name|render|striptags|trim|split(' ') %}
-              {% for item in siglas%}{{ item|first|upper|trim }}{% endfor %}
+              {% for item in siglas|slice(0, 2)%}{{ item|first|upper|trim }}{% endfor %}
 
               {% if 'experto' in node.getOwner().getroles()  %}
                 <div class="star_expertoTac"><img src="/themes/digitac/images/icons/icon-verified.svg" alt="" /></div>
