--- a/web/themes/digitac/templates/views/views-view-fields--estadisticas-usuarios--block.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--estadisticas-usuarios--block.html.twig
@@ -38,7 +38,7 @@
 
         <div class="group-comments__balls">
             {% set siglas = fields.uid_1.content|render|striptags|trim|split(' ') %}
-            {% for item in siglas%}{{ item|first|upper|trim }}{% endfor %}
+            {% for item in siglas|slice(0, 2)%}{{ item|first|upper|trim }}{% endfor %}
 
             {% if 'experto' in user.getroles()  %}
                 <div class="star_expertoTac"><img src="/themes/digitac/images/icons/icon-verified.svg" alt="" /></div>
