--- a/web/themes/digitac/scss/03_component/_text-formatted.scss
+++ b/web/themes/digitac/scss/03_component/_text-formatted.scss
@@ -58,6 +58,25 @@
             }
         }
 
+        blockquote {
+            margin: rem(40px) 0;
+            padding: rem(8px) 0 rem(8px) rem(20px);
+            border-left: rem(2px) solid $blue-700;
+
+            p {
+                font-family: $font-family-base;
+                font-style: italic;
+                font-weight: 500;
+                font-size: rem(24px);
+                line-height: rem(36px);
+                color: $primary;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+
     }
 
     img {
@@ -68,10 +87,10 @@
         border-radius: rem(12px);
     }
 
-    blockquote {
+    /* blockquote {
         margin: rem(40px) 0;
-        padding-left: rem(20px);
-        border-left: rem(1px) solid $primary;
+        padding: rem(8px) 0 rem(8px) rem(20px);
+        border-left: rem(2px) solid $blue-700;
 
         p {
             font-family: $font-family-base;
@@ -85,7 +104,7 @@
                 margin-bottom: 0;
             }
         }
-    }
+    } */
 
     table {
         width: 100%;
