--- a/web/themes/digitac/templates/views/views-view-table--comment--page_1.html.twig
+++ b/web/themes/digitac/templates/views/views-view-table--comment--page_1.html.twig
@@ -48,7 +48,7 @@
     {% if caption %}
       {{ caption }}
     {% else %}
-      {{ title }}
+      {{ title }} 
     {% endif %}
     {% if (summary is not empty) or (description is not empty) %}
       <details>
@@ -118,9 +118,13 @@
               {% endfor %}
               </{{ column.wrapper_element }}>
             {%- else -%}
+
               {% for content in column.content %}
-                {{- content.separator }}
+                  {% if loop.parent.loop.index == 2 %}<a href="/comentario/{{row['columns']['cid'].content.0.field_output['#markup']|striptags|trim }}">{%endif%}
+                  {{- content.separator }}
                   {{ content.field_output -}}
+                  {% if loop.parent.loop.index == 2 %}</a>{%endif%}
+
               {% endfor %}
             {%- endif %}
           </td>
@@ -128,6 +132,7 @@
         {% endfor %}
         <td><select onchange="ejecuta_accion({{row['columns']['cid'].content.0.field_output['#markup']|striptags|trim }})" id="accion-{{row['columns']['cid'].content.0.field_output['#markup']|striptags|trim }}">
             <option value="null">{{ 'Selecciona una acción'|t }}</option>
+            <option value="ver">{{ 'Ver'|t }}</option>
             <option value="apr">{{ 'Aprobar'|t }}</option>
         </select></td>
 
@@ -149,6 +154,10 @@ function ejecuta_accion(id)
     if(accion=='apr')
     {
       window.location.href = "/aprobar-comentario/"+id;
+    }
+    else if(accion=='ver')
+    {
+      window.location.href = "/comentario/"+id;
     }
 }
 </script>
