--- a/web/themes/digitac/templates/views/views-view-table--content--page_5.html.twig
+++ b/web/themes/digitac/templates/views/views-view-table--content--page_5.html.twig
@@ -130,7 +130,9 @@
                     <span class="idea_cerrado">{{'Cerrado'|t}}</span>
                   {% endif %}  
                 {% else %}
+                  {% if loop.parent.loop.index == 2 %}<a href="/idea/{{row['columns']['nid'].content.0.field_output['#markup']|striptags|trim }}">{%endif%}
                   {{ content.field_output -}}
+                  {% if loop.parent.loop.index == 2 %}</a>{%endif%}
                 {% endif %}
               {% endfor %}
             {%- endif %}
@@ -139,6 +141,7 @@
         {% endfor %}
         <td><select onchange="ejecuta_accion({{row['columns']['nid'].content.0.field_output['#markup']|striptags|trim }})" id="accion-{{row['columns']['nid'].content.0.field_output['#markup']|striptags|trim }}">
             <option value="null">{{ 'Selecciona una acción'|t }}</option>
+            <option value="ver">{{ 'Ver'|t }}</option>
             <option value="edi">{{ 'Editar'|t }}</option>
             <option value="bor">{{ 'Estado Borrador'|t }}</option>
             <option value="eva">{{ 'Estado en Evaluación'|t }}</option>
@@ -158,6 +161,10 @@ function ejecuta_accion(id)
     if(accion=='edi')
     {
       window.location.href = "/editar-idea?nid="+id;
+    }
+    else if(accion=='ver')
+    {
+      window.location.href = "/idea/"+id;
     }
     else if(accion!='null')
     {
